# engine2d

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.github/workflows/: ci.yml
assets/maps/: asteroids_wave1.tmj  asteroids_wave2.tmj  asteroids_wave3.tmj  asteroids_wave4.tmj  asteroids_wave5.tmj  level1.tmj  level2.tmj  longMap.tmj  sampleMap.tmj  sampleMap.tmx
assets/scripts/: level1.lua
assets/scripts/scenes/: ski.lua
assets/ski/: sampleSheet.tsj  sampleSheet.tsx
cmake/: EmbedScript.cmake  EmbedScriptRun.cmake  GenerateGameShim.cmake
cmake/lua_shim/: lua.hpp
docs/: ARCHITECTURE.md  CONTRIBUTING.md  LUA_API.md  MAIN_LOOP.md
scripts/: asteroids.lua  audio_test.lua  breakout.lua  main.lua  main_menu.lua  pause_menu.lua  ski.lua  smoke.lua  snake.lua  sprite_test.lua  util.lua
scripts/engine/: map_validate.lua  scene.lua  statemachine.lua
scripts/scenes/: ski.lua
scripts/tests/: README.md  audio_test.lua  sprite_test.lua
src/: main.cpp
src/audio/: AudioManager.cpp  AudioManager.hpp  stb_vorbis_impl.c
src/core/: Game.cpp  Game.hpp  HotReload.cpp  HotReload.hpp  SceneManager.cpp  SceneManager.hpp
src/ecs/: Component.hpp  Entity.hpp  IComponentStorage.hpp  SpatialHash.hpp  World.cpp  World.hpp
src/ecs/components/: AnimationComponent.hpp  KinematicComponent.cpp  KinematicComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TagComponent.hpp  TextComponent.hpp  TransformComponent.hpp  TransformerComponent.hpp
src/ecs/systems/: AnimationSystem.cpp  AnimationSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  TextSystem.cpp  TextSystem.hpp
src/input/: InputManager.cpp  InputManager.hpp
src/map/: MapLoader.cpp  MapLoader.hpp  MapSystem.cpp  MapSystem.hpp  TiledMap.hpp
src/rendering/: FontManager.cpp  FontManager.hpp  TextureManager.cpp  TextureManager.hpp
src/scripting/: RawBinding.hpp  ScriptingEngine.cpp  ScriptingEngine.hpp
src/scripting/bindings/: BindAudio.cpp  BindAudio.hpp  BindEngine.cpp  BindEngine.hpp  BindMapValidation.cpp  BindMapValidation.hpp  BindTextures.cpp  BindTextures.hpp  BindWorld.cpp  BindWorld.hpp  KeycodeFromString.cpp  KeycodeFromString.hpp
